--- a/client/style/components/form.scss
+++ b/client/style/components/form.scss
@@ -2,12 +2,12 @@
 
 .contact {
   text-align: center;
-  height: 100%;
+  height: 95vh;
   padding-top: 10vh;
   color: $black;
   background-color: $white-background;
   h1 {
-    padding-bottom: 2vh; 
+    padding-bottom: 2vh;
   }
 
   .contact-form {
@@ -75,7 +75,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    flex-wrap: wrap;
     margin-bottom: 2vh;
 
     a {
@@ -88,8 +87,20 @@
     }
   }
 }
+
 @media (max-width: 500px) {
+  .contact {
+    height: 130vh !important;
+    .from-field {
+      input {
+        width: 70% !important;
+      }
+    }
+  }
     .details {
+      display: flex;
+      flex-direction: column !important;
+      justify-content: space-around;
       div {
         margin-bottom: 3vh;
       }
@@ -97,7 +108,23 @@
   }
 
 @media (max-width: 720px) {
+  .contact {
+    height: 110vh;
     .contact-form {
       width: 80vw !important;
+    }
+    }
+  }
+
+  @media (max-width: 970px) {
+    .contact {
+      height: 100vh;
+      .contact-form {
+        .from-field {
+          input {
+            width: 70% !important;
+          }
+        }
+      }
     }
   }
