--- a/client/style/components/top.scss
+++ b/client/style/components/top.scss
@@ -77,7 +77,7 @@
     }
   }
 
-  @media (max-width: 500px) {
+  @media (max-width: 720px) {
     .top {
       .stamp {
         position: absolute;
