--- a/client/style/components/variables.scss
+++ b/client/style/components/variables.scss
@@ -1,6 +1,7 @@
 $font-stack: 'Alef', sans-serif;
 $white: rgb(255, 255, 255);
-$p-font-size: 18px;
+// $p-font-size: 18px;
+$p-font-size: 16px;
 $black: rgb(22, 22, 22);
 $white-background: rgb(230, 230, 230);
 $footer-background: rgb(57, 55, 60);
